<resources>
    <string name="app_name">ASMirror</string>

    <!-- general strings -->
    <string name="get_started">Get Started</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="forget_password">Forget Password?</string>
    <string name="create_account">Create new Account</string>
    <string name="already_registered">Already Registered?</string>
    <string name="select_image">Select Image</string>
    <string name="update_image">Update Image</string>
    <string name="change">Change</string>
    <string name="turn_on">Turn On</string>
    <string name="turn_off">Turn Off</string>
    <string name="loading">loading</string>
    <string name="mirror_id">Mirror ID</string>
    <string name="add_mirror">Add Mirror</string>
    <string name="reboot">Reboot</string>
    <string name="information">Information</string>
    <string name="settings">Settings</string>
    <string name="back">Back</string>
    <string name="ip_address">IP Address</string>

    <string name="make_life_smarter">Make your life smarter</string>
    <string name="splash_text">Join now to make life easier. Login or Register to get started.</string>
    <string name="update_profile_image">Select and crop an image for your profile. It will be displayed on your smart mirror profile.</string>
    <string name="update_train_image">Select and crop an image for face recognition. It would be best if you crop your face to get better recognition results.</string>

    <!-- strings for image description -->
</resources>