<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:orientation="vertical"
    tools:context=".auth.ProfileImageActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="25dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/update_profile_image"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"/>

    <ImageView
        android:id="@+id/profile_image_view"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/ic_signup"
        android:layout_margin="20dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/register" />

    <Button
        android:id="@+id/profile_image_select_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/select_image" />

    <Button
        android:id="@+id/profile_image_update_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/update_image" />

</LinearLayout>