<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashActivity"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:padding="25dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/splash_text"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_signup"
        android:layout_margin="20dp"
        android:layout_centerInParent="true"
        android:contentDescription="@string/register" />

    <Button
        android:id="@+id/splash_button_get_started"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:padding="12dp"
        android:text="@string/get_started"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"/>

</RelativeLayout>