<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:orientation="vertical"
    tools:context=".auth.TrainImageActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="25dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/update_train_image"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:id="@+id/train_image_view_1"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/ic_signup"
            android:layout_margin="20dp"
            android:contentDescription="@string/register" />

        <ImageView
            android:id="@+id/train_image_view_2"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/ic_signup"
            android:layout_margin="20dp"
            android:contentDescription="@string/register" />

        <ImageView
            android:id="@+id/train_image_view_3"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/ic_signup"
            android:layout_margin="20dp"
            android:contentDescription="@string/register" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:id="@+id/train_image_view_4"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/ic_signup"
            android:layout_margin="20dp"
            android:contentDescription="@string/register" />

        <ImageView
            android:id="@+id/train_image_view_5"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/ic_signup"
            android:layout_margin="20dp"
            android:contentDescription="@string/register" />

    </LinearLayout>

    <Button
        android:id="@+id/train_image_update_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/update_image" />

</LinearLayout>